--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           </div>
           <a href="#">Forgot Password?</a>
           <input type="submit" class="btn" value="Login" />
+          <a href="register.html" style="text-align: center;"> Create an account</a>
         </form>
       </div>
     </div>
