re-organised files

--- a/client/register.html
+++ b/client/register.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Full Stack Register Form</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap"
       rel="stylesheet"
