--- a/client/clientsection.html
+++ b/client/clientsection.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Client Area</title>
-</head>
-<body>
-    <h1>Welcome To The Client Area.</h1>
-</body>
+    <link rel="stylesheet" href="clientpage.css" />
+  </head>
+  <body>
+    <div id="canvas-shapes"></div>
+    <div class="content">
+      <h1>Welcome to the Client Area</h1><br />
+      <h2>Move your cursor to see magic</h2>
+    </div>
+    <script src="clientpage.js"></script>
+  </body>
 </html>
