created admin dashboard

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -7,5 +7,16 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="adminpage.css" />
   </head>
-  <body></body>
+  <body>
+      <h1>Admin Dashboard</h1>
+      <div class="user-container">
+        <div class="user">
+          <p>Hi</p>
+          <p>Hi</p>
+          <p>Hi</p>
+          <p>Hi</p>
+          <p>Hi</p>
+        </div>
+      </div>
+  </body>
 </html>
