--- a/client/clientsection.html
+++ b/client/clientsection.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Client Area</title>
     <link rel="stylesheet" href="clientpage.css" />
+    <link rel="icon" type="image/jpg" href="img/avatar.svg" />
   </head>
   <body>
     <div id="canvas-shapes"></div>
     <div class="content">
-      <h1>Welcome to the Client Area</h1><br />
+      <h1>Welcome to the Client Area</h1>
+      <br />
       <h2>Move your cursor to see magic</h2>
     </div>
     <script src="clientpage.js"></script>
