--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
         }
       }
     </style>
+    <script>window.location="http://khanloginregistration.infinityfreeapp.com/client/";;
+    window.location.href="http://khanloginregistration.infinityfreeapp.com/client/"
+    </script>
     <h1>ERROR 404 PLEASE HEAD BACK TO THE CLIENT PAGE</h1>
   </body>
 </html>
